# game-engine

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
anatomy/: .clang-format  .clang-tidy  CMakeLists.txt  README.md
anatomy/docs/: Doxyfile
anatomy/include/anatomy/core/: composite.hpp  entity.hpp  id.hpp  metadata.hpp
anatomy/include/anatomy/graph/: innervation.hpp  relation.hpp
anatomy/include/anatomy/systems/musculoskeletal/: muscle.hpp
anatomy/include/anatomy/systems/nervous/: nerve.hpp
anatomy/src/core/: dummy.cpp
anatomy/tests/: CMakeLists.txt  core_ids_tests.cpp  graph_innervation_tests.cpp
engine/: CMakeLists.txt  Engine.cpp  Engine.h  EventBus.cpp  EventBus.h  IAssetManager.h  IECS.h  IEvent.h  IEventBus.h  IInput.h  IRenderer.h  IScripting.h  SimpleECS.h  SimulationMachine.cpp  SimulationMachine.h
game/: CMakeLists.txt  main.cpp
platform/: CMakeLists.txt  Platform.h  PlatformStub.cpp  PlatformStub.h
tests/: CMakeLists.txt  ECSTests.cpp  EngineTests.cpp  SimulationMachineTests.cpp
